--- a/index.html
+++ b/index.html
@@ -1,11 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Landing Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>Landing Page</h1>
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <div class="header">
+      <div class="left-header">
+        <img src="#" alt="Header Logo" />
+      </div>
+      <div class="right-header">
+        <a href="#">header link one</a>
+        <a href="#">header link two</a>
+        <a href="#">header link three</a>
+      </div>
+    </div>
+
+    <div class="title">
+      <div class="title-left">
+        <h1>This website is awesome</h1>
+        <p>
+          This website has some subtext that goes here under the main title. It's smaller font and the color is lower
+          contrast
+        </p>
+        <button class="title-button">Sign up</button>
+      </div>
+      <div class="title-right">
+        <p>this is a placeholder for an image<p>
+      </div>
+    </div>
+
+    <div class="info">
+      <div class="info-title">
+        <h2>Some random information</h2>
+      </div>
+      <div class="container">
+        <div class="card">
+          <div class="square"></div>
+          <div class="card-text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="card">
+          <div class="square"></div>
+          <div class="card-text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="card">
+          <div class="square"></div>
+          <div class="card-text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="card">
+          <div class="square"></div>
+          <div class="card-text">this is some subtext under an illustration or image</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="quote">
+      <p class="quote-text1">It is not the size of the dog in the fight, it is the size of the fight in the dog</p>
+      <p class="quote-text2">- Mark Twain</p>
+    </div>
+
+    <div class="call">
+      <div class="call-left">
+        <p class="call-big">Call to action! It's time!</p>
+        <p class="call-small">Sign up for our product by clicking that button right over there!</p>
+      </div>
+      <div class="call-right">
+        <button class="call-button">Sign up</button>
+      </div>
+    </div>
+
+    <div class="footer">
+      <p>Copyright © The Odin Project 2023</p>
+    </div>
+  </body>
 </html>
