Add style settings to style.css
additionally add tweaks and format to index.html

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <button class="title-button">Sign up</button>
       </div>
       <div class="title-right">
-        <p>this is a placeholder for an image<p>
+        <div class="placeholder">this is a placeholder for an image</div>
       </div>
     </div>
 
     <div class="info">
       <div class="info-title">
-        <h2>Some random information</h2>
+        <h2>Some random information.</h2>
       </div>
       <div class="container">
         <div class="card">
@@ -57,14 +57,14 @@
     </div>
 
     <div class="quote">
-      <p class="quote-text1">It is not the size of the dog in the fight, it is the size of the fight in the dog</p>
+      <p class="quote-text1">It is not the size of the dog in the fight, it is the size of the fight in the dog.</p>
       <p class="quote-text2">- Mark Twain</p>
     </div>
 
     <div class="call">
       <div class="call-left">
-        <p class="call-big">Call to action! It's time!</p>
-        <p class="call-small">Sign up for our product by clicking that button right over there!</p>
+        <div class="call-big">Call to action! It's time!</div>
+        <div class="call-small">Sign up for our product by clicking that button right over there!</div>
       </div>
       <div class="call-right">
         <button class="call-button">Sign up</button>
